--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
-        "alpinejs": "^3.15.8"
+        "alpinejs": "^3.15.8",
+        "marked": "^17.0.2"
     }
 }
