--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "alpinejs": "^3.15.8",
-        "marked": "^17.0.2"
+        "marked": "^17.0.2",
+        "playwright": "^1.58.2"
     }
 }
